; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/dinput/extr_joystick.c_device_disabled_registry.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/dinput/extr_joystick.c_device_disabled_registry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@device_disabled_registry.disabled_str = internal constant [9 x i8] c"disabled\00", align 1
@device_disabled_registry.joystick_key = internal constant [10 x i8] c"Joysticks\00", align 1
@MAX_PATH = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [48 x i8] c"Disabling joystick '%s' based on registry key.\0A\00", align 1
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @device_disabled_registry(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %9 = load i32, i32* @MAX_PATH, align 4
  %10 = zext i32 %9 to i64
  %11 = call i8* @llvm.stacksave()
  store i8* %11, i8** %3, align 8
  %12 = alloca i8, i64 %10, align 16
  store i64 %10, i64* %4, align 8
  %13 = load i32, i32* @FALSE, align 4
  store i32 %13, i32* %8, align 4
  %14 = call i32 @get_app_key(i64* %5, i64* %6)
  %15 = load i64, i64* %6, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %26

17:                                               ; preds = %1
  %18 = load i64, i64* %6, align 8
  %19 = call i64 @RegOpenKeyA(i64 %18, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @device_disabled_registry.joystick_key, i64 0, i64 0), i64* %7)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %17
  store i64 0, i64* %7, align 8
  br label %22

22:                                               ; preds = %21, %17
  %23 = load i64, i64* %6, align 8
  %24 = call i32 @RegCloseKey(i64 %23)
  %25 = load i64, i64* %7, align 8
  store i64 %25, i64* %6, align 8
  br label %26

26:                                               ; preds = %22, %1
  %27 = load i64, i64* %5, align 8
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %38

29:                                               ; preds = %26
  %30 = load i64, i64* %5, align 8
  %31 = call i64 @RegOpenKeyA(i64 %30, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @device_disabled_registry.joystick_key, i64 0, i64 0), i64* %7)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %34

33:                                               ; preds = %29
  store i64 0, i64* %7, align 8
  br label %34

34:                                               ; preds = %33, %29
  %35 = load i64, i64* %5, align 8
  %36 = call i32 @RegCloseKey(i64 %35)
  %37 = load i64, i64* %7, align 8
  store i64 %37, i64* %5, align 8
  br label %38

38:                                               ; preds = %34, %26
  %39 = load i64, i64* %5, align 8
  %40 = load i64, i64* %6, align 8
  %41 = load i8*, i8** %2, align 8
  %42 = trunc i64 %10 to i32
  %43 = call i32 @get_config_key(i64 %39, i64 %40, i8* %41, i8* %12, i32 %42)
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %53, label %45

45:                                               ; preds = %38
  %46 = call i32 @strcmp(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @device_disabled_registry.disabled_str, i64 0, i64 0), i8* %12)
  %47 = icmp ne i32 %46, 0
  br i1 %47, label %52, label %48

48:                                               ; preds = %45
  %49 = load i8*, i8** %2, align 8
  %50 = call i32 @TRACE(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0), i8* %49)
  %51 = load i32, i32* @TRUE, align 4
  store i32 %51, i32* %8, align 4
  br label %52

52:                                               ; preds = %48, %45
  br label %53

53:                                               ; preds = %52, %38
  %54 = load i64, i64* %6, align 8
  %55 = icmp ne i64 %54, 0
  br i1 %55, label %56, label %59

56:                                               ; preds = %53
  %57 = load i64, i64* %6, align 8
  %58 = call i32 @RegCloseKey(i64 %57)
  br label %59

59:                                               ; preds = %56, %53
  %60 = load i64, i64* %5, align 8
  %61 = icmp ne i64 %60, 0
  br i1 %61, label %62, label %65

62:                                               ; preds = %59
  %63 = load i64, i64* %5, align 8
  %64 = call i32 @RegCloseKey(i64 %63)
  br label %65

65:                                               ; preds = %62, %59
  %66 = load i32, i32* %8, align 4
  %67 = load i8*, i8** %3, align 8
  call void @llvm.stackrestore(i8* %67)
  ret i32 %66
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @get_app_key(i64*, i64*) #2

declare dso_local i64 @RegOpenKeyA(i64, i8*, i64*) #2

declare dso_local i32 @RegCloseKey(i64) #2

declare dso_local i32 @get_config_key(i64, i64, i8*, i8*, i32) #2

declare dso_local i32 @strcmp(i8*, i8*) #2

declare dso_local i32 @TRACE(i8*, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
